--- a/website/index_en.html
+++ b/website/index_en.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>[Titolo Progetto]</title>
+  <title>[Project Title]</title>
   <link href="assets/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -11,21 +11,21 @@
 <header class="topbar">
   <div class="topbar-inner">
     <div class="brand">
-      <span class="brand-title">[Titolo Progetto]</span>
-      <span class="brand-sub">Computational Geometry — a.a. 2025/2026</span>
+      <span class="brand-title">[Project Title]</span>
+      <span class="brand-sub">Computational Geometry — AY 2025/2026</span>
     </div>
 
     <div class="topbar-right">
       <nav class="nav">
-        <a class="active" href="index.html">Home</a>
-        <a href="theory.html">Teoria</a>
-        <a href="manual.html">Manuale</a>
-        <a class="btn" href="applet.html">Applet</a>
+        <a class="active" href="index_en.html">Home</a>
+        <a href="theory_en.html">Theory</a>
+        <a href="manual_en.html">User Manual</a>
+        <a class="btn" href="applet_en.html">Applet</a>
       </nav>
 
       <div class="lang-switch">
-        <a class="active" href="index.html">IT</a> ·
-        <a href="index_en.html">EN</a>
+        <a href="index.html">IT</a> ·
+        <a class="active" href="index_en.html">EN</a>
       </div>
 
       <a class="github-link" href="https://github.com/USERNAME/REPO" target="_blank">
@@ -38,7 +38,7 @@
 <main class="container">
 
   <section class="card">
-    <h1>[Titolo Progetto]</h1>
+    <h1>[Project Title]</h1>
 
     <ul class="meta">
       <li><strong>Engine:</strong> Unity WebGL</li>
@@ -47,29 +47,29 @@
     </ul>
 
     <p class="muted">
-      Corso: <strong>Computational Geometry</strong><br/>
-      Autore: <strong>[Nome Cognome]</strong> — Matricola: <strong>[XXXXXX]</strong><br/>
-      Università: <strong>University of Milan (UNIMI)</strong>
+      Course: <strong>Computational Geometry</strong><br/>
+      Author: <strong>[Name Surname]</strong> — Student ID: <strong>[XXXXXX]</strong><br/>
+      University: <strong>University of Milan</strong>
     </p>
 
     <p>
-      <strong>Descrizione:</strong><br/>
-      [Breve descrizione del progetto e dell’applet.]
+      <strong>Description:</strong><br/>
+      [Short description of the project and the applet.]
     </p>
   </section>
 
   <section class="card">
-    <h2>Contenuti</h2>
+    <h2>Contents</h2>
     <ul class="links">
-      <li><a href="theory.html">Teoria</a> — concetti teorici utilizzati</li>
-      <li><a href="manual.html">Manuale utente</a> — istruzioni d’uso</li>
-      <li><a href="applet.html">Applet</a> — demo interattiva</li>
+      <li><a href="theory_en.html">Theory</a> — theoretical background</li>
+      <li><a href="manual_en.html">User Manual</a> — usage instructions</li>
+      <li><a href="applet_en.html">Applet</a> — interactive demo</li>
     </ul>
   </section>
 
   <footer class="footer">
     <p>
-      © 2025 [Nome Cognome] — Computational Geometry, University of Milan
+      © 2025 [Name Surname] — Computational Geometry, University of Milan
     </p>
     <div class="footer-links">
       <a href="https://github.com/USERNAME/REPO" target="_blank">GitHub</a>
