--- a/website/theory.html
+++ b/website/theory.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>[Titolo Progetto]</title>
+  <title>Teoria</title>
   <link href="assets/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -17,15 +17,15 @@
 
     <div class="topbar-right">
       <nav class="nav">
-        <a class="active" href="index.html">Home</a>
-        <a href="theory.html">Teoria</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="theory.html">Teoria</a>
         <a href="manual.html">Manuale</a>
         <a class="btn" href="applet.html">Applet</a>
       </nav>
 
       <div class="lang-switch">
-        <a class="active" href="index.html">IT</a> ·
-        <a href="index_en.html">EN</a>
+        <a class="active" href="theory.html">IT</a> ·
+        <a href="theory_en.html">EN</a>
       </div>
 
       <a class="github-link" href="https://github.com/USERNAME/REPO" target="_blank">
@@ -37,35 +37,14 @@
 
 <main class="container">
 
-  <section class="card">
-    <h1>[Titolo Progetto]</h1>
-
-    <ul class="meta">
-      <li><strong>Engine:</strong> Unity WebGL</li>
-      <li><strong>Language:</strong> C#, JavaScript</li>
-      <li><strong>Topic:</strong> Computational Geometry</li>
-    </ul>
+  <article class="card">
+    <h1>Teoria</h1>
 
     <p class="muted">
-      Corso: <strong>Computational Geometry</strong><br/>
-      Autore: <strong>[Nome Cognome]</strong> — Matricola: <strong>[XXXXXX]</strong><br/>
-      Università: <strong>University of Milan (UNIMI)</strong>
+      Per una dimostrazione interattiva dei concetti descritti,
+      consultare l’<a href="applet.html">Applet</a>.
     </p>
-
-    <p>
-      <strong>Descrizione:</strong><br/>
-      [Breve descrizione del progetto e dell’applet.]
-    </p>
-  </section>
-
-  <section class="card">
-    <h2>Contenuti</h2>
-    <ul class="links">
-      <li><a href="theory.html">Teoria</a> — concetti teorici utilizzati</li>
-      <li><a href="manual.html">Manuale utente</a> — istruzioni d’uso</li>
-      <li><a href="applet.html">Applet</a> — demo interattiva</li>
-    </ul>
-  </section>
+  </article>
 
   <footer class="footer">
     <p>
